# devpilot

./: .gitignore  README.md  lefthook.yml  pyproject.toml
.github/workflows/: build-publish.yml  pytest-codecov.yml
devpilot/: utils.py
devpilot/cli/: console.py  main.py
devpilot/cli/commands/chglog/: main.py
devpilot/cli/commands/docker/: main.py
devpilot/cli/commands/info/: main.py
devpilot/cli/commands/init/: main.py
devpilot/cli/commands/license/: main.py
devpilot/cli/commands/version/: __init__.py  main.py
tests/: test_utils.py
tests/test_cli/: conftest.py  test_info.py  test_main.py
